--- a/templates/search-result.html
+++ b/templates/search-result.html
@@ -28,7 +28,9 @@
               <div class="card-body">
                 <h5 class="card-title"> Query: {{ query }} </h5>
                 <pre>
-                  <p class="card-text"> {{ content }} </p>
+                  <p class="card-text">
+                      {{ content }}
+                  </p>
                 </pre>
               </div>
             </div>
